deploy/manifests/subseries/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subseries-frontend
  namespace: personal-site
spec:
  selector:
    matchLabels:
      app: subseries-frontend
  template:
    metadata:
      labels:
        app: subseries-frontend
    spec:
      containers:
      - image: raphaelreyna/subseries-webgl:v0.1.10
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: subseries-frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 10m
            memory: 32Mi
          requests:
            cpu: 5m
            memory: 16Mi
