deploy/manifests/subseries/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: subseries-backend
  namespace: personal-site
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: subseries-backend
