deploy/manifests/subseries/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: subseries-frontend
  namespace: personal-site
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: subseries-frontend
